Why section z-index fixed

--- a/frontend/src/style/components/_WhyListItem.sass
+++ b/frontend/src/style/components/_WhyListItem.sass
@@ -1,8 +1,10 @@
 .whyListItem
+    position: relative
     height: 17vh
     display: flex
     flex-flow: column nowrap
     gap: 3vh
+    z-index: 2
 
     &__itemHeading
         display: flex
