--- a/frontend/src/style/pages/_Why.sass
+++ b/frontend/src/style/pages/_Why.sass
@@ -38,6 +38,7 @@
             right: -5vmax
 
     &__titleContainer
+        position: relative
         height: 90%
         grid-column: 1/7
         display: flex
